Blender crash whith 'corrupt' customdata (CD_BWEIGHT) #62318

Closed
opened 2019-03-07 16:01:19 +01:00 by Marcin Twarowski · 28 comments

Win 10, GTX 1080
Blender 2.80 2019-03-07 11:23 a280867ac2

Attached blend file crashes Blender immediately on attempt to open it. It's possible to append the object Circle.006 from the file. However when you try to switch to edit mode it closes Blender. Interestingly, if you copy that object then you can enter edit mode on that copied mesh.
shelf.blend

Win 10, GTX 1080 Blender 2.80 2019-03-07 11:23 a280867ac2ed Attached blend file crashes Blender immediately on attempt to open it. It's possible to append the object Circle.006 from the file. However when you try to switch to edit mode it closes Blender. Interestingly, if you copy that object then you can enter edit mode on that copied mesh. [shelf.blend](https://archive.blender.org/developer/F6779759/shelf.blend)

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

#62378 was marked as duplicate of this issue

#62378 was marked as duplicate of this issue

#62371 was marked as duplicate of this issue

#62371 was marked as duplicate of this issue

#62372 was marked as duplicate of this issue

#62372 was marked as duplicate of this issue

#62324 was marked as duplicate of this issue

#62324 was marked as duplicate of this issue

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Campbell Barton was assigned by Sebastian Parborg 2019-03-07 16:53:31 +01:00

Backtrace:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x00007ffff1392890 in __memcpy_ssse3 () from /lib64/libc.so.6
(gdb) bt
- 0  0x00007ffff1392890 in __memcpy_ssse3 () from /lib64/libc.so.6
- 1  0x0000555558149e29 in CustomData_to_bmesh_block (source=0x7fffcf3a5708, dest=0x7fffd8811668, src_index=0, dest_block=0x7fffcf4d0010,
    use_default_init=true) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/customdata.c:3315
#2  0x0000555557cb8571 in BM_mesh_bm_from_me (bm=0x7fffd8811508, me=0x7fffcf3a5508, params=0x7fffffffcd80)
    at /home/zed/programmering/blender_master/blender/source/blender/bmesh/intern/bmesh_mesh_conv.c:348
#3  0x00005555581fb361 in BKE_mesh_to_bmesh_ex (me=0x7fffcf3a5508, create_params=0x7fffffffcdc4, convert_params=0x7fffffffcd80)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/mesh.c:712
#4  0x00005555581fb3f9 in BKE_mesh_to_bmesh (me=0x7fffcf3a5508, ob=0x7fffcf3d1608, add_key_index=false, params=0x7fffffffcdc4)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/mesh.c:721
#5  0x000055555764cff3 in EDBM_mesh_make (ob=0x7fffcf3d1608, select_mode=4, add_key_index=false)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/mesh/editmesh_utils.c:296
#6  0x0000555557734c88 in ED_object_editmode_enter_ex (bmain=0x7fffcf3a6308, scene=0x7fffe4f19008, ob=0x7fffcf3d1608, flag=0)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/object/object_edit.c:573
- 7  0x000055555791a02e in ED_editors_init (C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/editors/util/ed_util.c:142
- 8  0x000055555722d120 in wm_file_read_post (C=0x7fffea058188, is_startup_file=false, is_factory_startup=false, reset_app_template=false)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_files.c:521
#9  0x000055555722d488 in WM_file_read (C=0x7fffea058188, filepath=0x7fffffffd020 "/tmp/bugs/shelf.blend", reports=0x7fffcf601a08)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_files.c:638
#10 0x00005555572305b8 in wm_file_read_opwrap (C=0x7fffea058188, filepath=0x7fffffffd020 "/tmp/bugs/shelf.blend", reports=0x7fffcf601a08, autoexec_init=true)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_files.c:1864
#11 0x0000555557230828 in wm_open_mainfile_exec (C=0x7fffea058188, op=0x7fffcf5d4648)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_files.c:1924
#12 0x00005555572234b7 in wm_operator_invoke (C=0x7fffea058188, ot=0x7fffe963d8a8, event=0x0, properties=0x7fffffffd600, reports=0x0, poll_only=false,
    use_last_properties=true) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:1352
#13 0x0000555557223cba in wm_operator_call_internal (C=0x7fffea058188, ot=0x7fffe963d8a8, properties=0x7fffffffd600, reports=0x0, context=6, poll_only=false,
    event=0x0) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:1585
#14 0x0000555557223d77 in WM_operator_name_call_ptr (C=0x7fffea058188, ot=0x7fffe963d8a8, context=6, properties=0x7fffffffd600)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:1597
#15 0x0000555557566af7 in ui_apply_but_funcs_after (C=0x7fffea058188)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/interface/interface_handlers.c:770
#16 0x000055555757fc82 in ui_popup_handler (C=0x7fffea058188, event=0x7fffcc3edd88, userdata=0x7fffcecf8048)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/interface/interface_handlers.c:9988
#17 0x000055555722113f in wm_handler_ui_call (C=0x7fffea058188, handler=0x7fffcfc4e7a8, event=0x7fffcc3edd88, always_pass=0)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:584
#18 0x00005555572260b8 in wm_handlers_do_intern (C=0x7fffea058188, event=0x7fffcc3edd88, handlers=0x7fffe4e52198)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2469
#19 0x0000555557226a8f in wm_handlers_do (C=0x7fffea058188, event=0x7fffcc3edd88, handlers=0x7fffe4e52198)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2698
#20 0x0000555557227cc3 in wm_event_do_handlers (C=0x7fffea058188)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:3049
- 21 0x000055555721c71f in WM_main (C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:418
- 22 0x0000555557216e54 in main (argc=1, argv=0x7fffffffdd28) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:505
Backtrace: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x00007ffff1392890 in __memcpy_ssse3 () from /lib64/libc.so.6 (gdb) bt - 0 0x00007ffff1392890 in __memcpy_ssse3 () from /lib64/libc.so.6 - 1 0x0000555558149e29 in CustomData_to_bmesh_block (source=0x7fffcf3a5708, dest=0x7fffd8811668, src_index=0, dest_block=0x7fffcf4d0010, use_default_init=true) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/customdata.c:3315 #2 0x0000555557cb8571 in BM_mesh_bm_from_me (bm=0x7fffd8811508, me=0x7fffcf3a5508, params=0x7fffffffcd80) at /home/zed/programmering/blender_master/blender/source/blender/bmesh/intern/bmesh_mesh_conv.c:348 #3 0x00005555581fb361 in BKE_mesh_to_bmesh_ex (me=0x7fffcf3a5508, create_params=0x7fffffffcdc4, convert_params=0x7fffffffcd80) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/mesh.c:712 #4 0x00005555581fb3f9 in BKE_mesh_to_bmesh (me=0x7fffcf3a5508, ob=0x7fffcf3d1608, add_key_index=false, params=0x7fffffffcdc4) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/mesh.c:721 #5 0x000055555764cff3 in EDBM_mesh_make (ob=0x7fffcf3d1608, select_mode=4, add_key_index=false) at /home/zed/programmering/blender_master/blender/source/blender/editors/mesh/editmesh_utils.c:296 #6 0x0000555557734c88 in ED_object_editmode_enter_ex (bmain=0x7fffcf3a6308, scene=0x7fffe4f19008, ob=0x7fffcf3d1608, flag=0) at /home/zed/programmering/blender_master/blender/source/blender/editors/object/object_edit.c:573 - 7 0x000055555791a02e in ED_editors_init (C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/editors/util/ed_util.c:142 - 8 0x000055555722d120 in wm_file_read_post (C=0x7fffea058188, is_startup_file=false, is_factory_startup=false, reset_app_template=false) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_files.c:521 #9 0x000055555722d488 in WM_file_read (C=0x7fffea058188, filepath=0x7fffffffd020 "/tmp/bugs/shelf.blend", reports=0x7fffcf601a08) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_files.c:638 #10 0x00005555572305b8 in wm_file_read_opwrap (C=0x7fffea058188, filepath=0x7fffffffd020 "/tmp/bugs/shelf.blend", reports=0x7fffcf601a08, autoexec_init=true) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_files.c:1864 #11 0x0000555557230828 in wm_open_mainfile_exec (C=0x7fffea058188, op=0x7fffcf5d4648) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_files.c:1924 #12 0x00005555572234b7 in wm_operator_invoke (C=0x7fffea058188, ot=0x7fffe963d8a8, event=0x0, properties=0x7fffffffd600, reports=0x0, poll_only=false, use_last_properties=true) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:1352 #13 0x0000555557223cba in wm_operator_call_internal (C=0x7fffea058188, ot=0x7fffe963d8a8, properties=0x7fffffffd600, reports=0x0, context=6, poll_only=false, event=0x0) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:1585 #14 0x0000555557223d77 in WM_operator_name_call_ptr (C=0x7fffea058188, ot=0x7fffe963d8a8, context=6, properties=0x7fffffffd600) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:1597 #15 0x0000555557566af7 in ui_apply_but_funcs_after (C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/editors/interface/interface_handlers.c:770 #16 0x000055555757fc82 in ui_popup_handler (C=0x7fffea058188, event=0x7fffcc3edd88, userdata=0x7fffcecf8048) at /home/zed/programmering/blender_master/blender/source/blender/editors/interface/interface_handlers.c:9988 #17 0x000055555722113f in wm_handler_ui_call (C=0x7fffea058188, handler=0x7fffcfc4e7a8, event=0x7fffcc3edd88, always_pass=0) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:584 #18 0x00005555572260b8 in wm_handlers_do_intern (C=0x7fffea058188, event=0x7fffcc3edd88, handlers=0x7fffe4e52198) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2469 #19 0x0000555557226a8f in wm_handlers_do (C=0x7fffea058188, event=0x7fffcc3edd88, handlers=0x7fffe4e52198) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2698 #20 0x0000555557227cc3 in wm_event_do_handlers (C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:3049 - 21 0x000055555721c71f in WM_main (C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:418 - 22 0x0000555557216e54 in main (argc=1, argv=0x7fffffffdd28) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:505 ```
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

There seems to be a broken custom data layer of type CD_BWEIGHT, which data not have data (source->layers- [x]->data == NULL).

There seems to be a broken custom data layer of type `CD_BWEIGHT`, which data not have `data` (`source->layers- [x]->data == NULL`).

As I mentioned, if you append this object, do a copy of it, then you can enter edit mode of that copied object. However, if you save that copied object, restart Blender and open the file, you want be able to enter edit mode again.

As I mentioned, if you append this object, do a copy of it, then you can enter edit mode of that copied object. However, if you save that copied object, restart Blender and open the file, you want be able to enter edit mode again.

I appended the mesh to 2.79a. It crashes when I try to enter edit mode. So I did a copy of the object. Saved, restarted Blender. Now edit mode works. I Appended that 2.79 mesh back to Blender 2.80. Saved, restarted Blender. Edit mode crashes Blender.

I appended the mesh to 2.79a. It crashes when I try to enter edit mode. So I did a copy of the object. Saved, restarted Blender. Now edit mode works. I Appended that 2.79 mesh back to Blender 2.80. Saved, restarted Blender. Edit mode crashes Blender.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

get the same backtrace in #62324

regarding the CD_BWEIGHT thingie:
In the startup file, as soon as you set any Edge Bevel Weight in editmode, then enter objectmode, I am getting:
write_customdata error: layer '':29 - can't be written to file [which might already be the source of the problem...]

get the same backtrace in #62324 regarding the `CD_BWEIGHT` thingie: In the startup file, as soon as you set any `Edge Bevel Weight` in editmode, then enter objectmode, I am getting: `write_customdata error: layer '':29 - can't be written to file` [which might already be the source of the problem...]

Here's a file you can open but crashes when you enter edit mode: shelf_2.blend
Try this:

  • Convert to -> Mesh from Curve/Meta/Surf/Text
  • Now modifiers are applied.
  • You can enter edit mode.
  • Undo (ctrl+z).
  • Crash.
Here's a file you can open but crashes when you enter edit mode: [shelf_2.blend](https://archive.blender.org/developer/F6783586/shelf_2.blend) Try this: - Convert to -> Mesh from Curve/Meta/Surf/Text - Now modifiers are applied. - You can enter edit mode. - Undo (ctrl+z). - Crash.
Member

just dropping this here as well [actually I assume these two reports could be merged?]

In #62324#635400, @lichtwerk wrote:
quick bandaid would be still need to check if this could also be handled [here ]
P930: T62324_snippet



diff --git a/source/blender/blenloader/intern/writefile.c b/source/blender/blenloader/intern/writefile.c
index c2cd6f282e8..603e68c8771 100644
--- a/source/blender/blenloader/intern/writefile.c
+++ b/source/blender/blenloader/intern/writefile.c
@@ -2126,7 +2126,7 @@ static void write_customdata(
 		else if (layer->type == CD_MDISPS) {
 			write_mdisps(wd, count, layer->data, layer->flag & CD_FLAG_EXTERNAL);
 		}
-		else if (layer->type == CD_PAINT_MASK) {
+		else if (ELEM(layer->type, CD_PAINT_MASK, CD_BWEIGHT)) {
 			const float *layer_data = layer->data;
 			writedata(wd, DATA, sizeof(*layer_data) * count, layer_data);
 		}

this will then not crash / prevent the 'corrupted' CD_BWEIGHT, but it is probably best to also put in a security check in the unfortunate case where this layer is indeed corrupted...

just dropping this here as well [actually I assume these two reports could be merged?] > In #62324#635400, @lichtwerk wrote: > quick bandaid would be [still need to check if this could also be handled [here ]](https://developer.blender.org/diffusion/B/browse/master/source/blender/blenloader/intern/writefile.c$2141) > [P930: T62324_snippet](https://archive.blender.org/developer/P930.txt) ``` diff --git a/source/blender/blenloader/intern/writefile.c b/source/blender/blenloader/intern/writefile.c index c2cd6f282e8..603e68c8771 100644 --- a/source/blender/blenloader/intern/writefile.c +++ b/source/blender/blenloader/intern/writefile.c @@ -2126,7 +2126,7 @@ static void write_customdata( else if (layer->type == CD_MDISPS) { write_mdisps(wd, count, layer->data, layer->flag & CD_FLAG_EXTERNAL); } - else if (layer->type == CD_PAINT_MASK) { + else if (ELEM(layer->type, CD_PAINT_MASK, CD_BWEIGHT)) { const float *layer_data = layer->data; writedata(wd, DATA, sizeof(*layer_data) * count, layer_data); } ``` > > this will then not crash / prevent the 'corrupted' CD_BWEIGHT, but it is probably best to also put in a security check in the unfortunate case where this layer is indeed corrupted...

Added subscriber: @standard_owl

Added subscriber: @standard_owl

Same issue here (March 08, 02:42:38 - 0ba143a1d6).crashObject.blend. When opened with another version (7d792976e1 from 17/02/2019 which worked fine back then) it crashes as well when I try to enter edit mode.

Same issue here (March 08, 02:42:38 - 0ba143a1d675).[crashObject.blend](https://archive.blender.org/developer/F6783664/crashObject.blend). When opened with another version (7d792976e100 from 17/02/2019 which worked fine back then) it crashes as well when I try to enter edit mode.

Added subscriber: @Yolao

Added subscriber: @Yolao
Member

@MarcinTwarowski : your second file crashes for the same reason ('corrupted' CD_BWEIGHT)

@MarcinTwarowski : your second file crashes for the same reason ('corrupted' `CD_BWEIGHT`)

Added subscribers: @mont29, @ideasman42, @brecht

Added subscribers: @mont29, @ideasman42, @brecht
Campbell Barton was unassigned by Brecht Van Lommel 2019-03-08 10:33:10 +01:00
Bastien Montagne was assigned by Brecht Van Lommel 2019-03-08 10:33:10 +01:00

@mont29 recently did refactoring of customdata.

@mont29 recently did refactoring of customdata.
Member

yep, write_customdata error: layer '':29 - can't be written to file started with ab0bc65c24

yep, `write_customdata error: layer '':29 - can't be written to file` started with ab0bc65c24
Philipp Oeser changed title from Blender crash when opening certain file to Blender crash whith 'corrupt' customdata (CD_BWEIGHT) 2019-03-08 10:53:19 +01:00

This issue was referenced by 18d470e5e4

This issue was referenced by 18d470e5e44dae79bd571b604d03e7bda92aa501

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @Vlitz

Added subscriber: @Vlitz

Removed subscriber: @Vlitz

Removed subscriber: @Vlitz

Added subscribers: @ostapblender, @Russ1642

Added subscribers: @ostapblender, @Russ1642

Added subscriber: @iszotic

Added subscriber: @iszotic
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62318
No description provided.